--- a/directory.html
+++ b/directory.html
@@ -2050,7 +2050,7 @@
 
       // Google Apps Script configuration - UPDATE THIS WITH YOUR ACTUAL URL
       const APPS_SCRIPT_URL =
-        "https://script.google.com/macros/s/AKfycbxd1QVulqQLufxt3Z2Zmvn9pbj6rigkkDk3x_u_g3LEfsUDxUiGlB2UYG9Q_kKT7aQL/exec";
+        "https://script.google.com/macros/s/AKfycby1yreSu1WvHixUpq2MYBDwxmentF1kKAspzOtRfdORmIYji5rlU1GgFQ7_aZE8OnbA/exec";
 
       // Toggle form visibility
       function toggleForm(formId) {
@@ -2151,12 +2151,15 @@
           header.textContent = "Success!";
           if (keboonId) {
             messageDiv.innerHTML = `
-        Farm added successfully to Keboon Directory!
-        <br><br>
-        Your Keboon ID is:
-        <div class="keboon-id-highlight">${keboonId}</div>
-        <strong>Please save this ID to edit your listing.</strong>
-      `;
+    ${message.replace(
+      "Farm added successfully!",
+      "Farm added successfully to Keboon Directory!"
+    )}
+    <br><br>
+    Your Keboon ID is:
+    <div class="keboon-id-highlight">${keboonId}</div>
+    <strong>Please save this ID along with your phone number to edit your listing later.</strong>
+  `;
           } else {
             messageDiv.innerHTML = message;
           }
@@ -3245,26 +3248,38 @@
           const result = await response.json();
 
           if (result.success) {
+            let successMessage = "";
+
             if (isEditMode) {
-              showSuccess(
-                "🎉 Farm information updated successfully!",
-                formType
-              );
+              successMessage = "🎉 Farm information updated successfully!";
+              if (result.emailSent) {
+                successMessage +=
+                  "<br><br>📧 A confirmation email has been sent to your registered email address.";
+              } else if (result.emailError) {
+                successMessage +=
+                  "<br><br>⚠️ Note: Confirmation email could not be sent.";
+              }
+
+              showMessagePopup(successMessage, "success");
+
               // Reload the updated data
               setTimeout(() => {
                 loadFarmerData();
               }, 1500);
             } else {
-              showSuccess(
-                "🎉 Farm added successfully to Keboon Directory!",
-                formType
-              );
               if (result.keboonId) {
-                showMessagePopup(
-                  "Farm added successfully!",
-                  "success",
-                  result.keboonId
-                );
+                // Create enhanced message for new farm
+                let farmMessage =
+                  "Farm added successfully to Keboon Directory!";
+                if (result.emailSent) {
+                  farmMessage +=
+                    "<br><br>📧 A detailed confirmation email with all your farm information has been sent to your email address.";
+                } else if (result.emailError) {
+                  farmMessage +=
+                    "<br><br>⚠️ Note: Confirmation email could not be sent, but your farm has been added successfully.";
+                }
+
+                showMessagePopup(farmMessage, "success", result.keboonId);
               } else {
                 showSuccess(
                   "🎉 Farm added successfully to Keboon Directory!",
