--- a/profile.html
+++ b/profile.html
@@ -266,53 +266,64 @@
         color: #666;
       }
 
-      /* Contact */
+      /* Contact - Updated to 2x2 Grid with stacked layout */
       .contact-grid {
         display: grid;
+        grid-template-columns: 1fr 1fr;
         gap: 16px;
       }
 
       .contact-item {
         display: flex;
-        align-items: flex-start;
-        gap: 12px;
-        padding: 12px 0;
+        flex-direction: column;
+        gap: 8px;
+        padding: 12px;
+        background: white;
+        border: 1px solid #e5e5e5;
+        border-radius: 6px;
+        transition: all 0.2s ease;
+      }
+
+      .contact-item:hover {
+        border-color: #2d5016;
+        transform: translateY(-1px);
+      }
+
+      .contact-header {
+        display: flex;
+        align-items: center;
+        gap: 8px;
       }
 
       .contact-icon {
-        width: 20px;
-        height: 20px;
+        width: 18px;
+        height: 18px;
         display: flex;
         align-items: center;
         justify-content: center;
         color: #666;
         flex-shrink: 0;
-        margin-top: 2px;
       }
 
       .contact-icon svg {
-        width: 20px;
-        height: 20px;
+        width: 18px;
+        height: 18px;
         fill: currentColor;
-      }
-
-      .contact-info {
-        flex: 1;
-        min-width: 0;
       }
 
       .contact-label {
         font-size: 12px;
         color: #666;
-        margin-bottom: 2px;
         text-transform: uppercase;
         letter-spacing: 0.5px;
+        font-weight: 500;
       }
 
       .contact-value {
         font-size: 14px;
         color: #333;
         word-break: break-word;
+        margin-left: 26px; /* Align with the label text */
       }
 
       .contact-value a {
@@ -528,28 +539,32 @@
           order: 6;
         } /* Links */
 
-        /* Mobile centered contact */
+        /* Mobile contact - revert to single column on small screens */
+        /* Mobile contact - revert to single column on small screens */
         .contact-grid {
+          grid-template-columns: 1fr;
           gap: 12px;
-          text-align: center;
         }
 
         .contact-item {
-          padding: 8px 0;
+          padding: 12px;
           justify-content: center;
           text-align: center;
-          flex-direction: column;
           align-items: center;
+        }
+
+        .contact-header {
+          justify-content: center;
+        }
+
+        .contact-value {
+          margin-left: 0; /* Remove left margin for centered layout */
+          text-align: center;
         }
 
         .contact-icon {
           width: 18px;
           height: 18px;
-          margin-bottom: 4px;
-        }
-
-        .contact-info {
-          text-align: center;
         }
 
         /* Compact products */
@@ -687,9 +702,7 @@
 
         <div class="farm-info">
           <div class="farm-title" id="farmTitle">Loading...</div>
-          <div class="farm-subtitle" id="farmSubtitle">
-            Loading farm information...
-          </div>
+          <div class="farm-subtitle" id="farmSubtitle"></div>
           <div class="farm-badges" id="farmBadges">
             <!-- Badges will be populated by JavaScript -->
           </div>
@@ -849,9 +862,7 @@
 
         // Header information
         document.getElementById("farmTitle").textContent = farmer.farmName;
-        document.getElementById(
-          "farmSubtitle"
-        ).textContent = `${farmer.category} • ${farmer.contactName}`;
+        document.getElementById("farmSubtitle").textContent;
 
         // Badges
         const badgesContainer = document.getElementById("farmBadges");
@@ -884,32 +895,32 @@
         const contactItems = [
           {
             icon: `<svg viewBox="0 0 24 24" fill="currentColor">
-                     <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
-                   </svg>`,
+               <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+             </svg>`,
             label: "Contact",
             value: farmer.contactName,
             href: null,
           },
           {
             icon: `<svg viewBox="0 0 24 24" fill="currentColor">
-                     <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
-                   </svg>`,
+               <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+             </svg>`,
             label: "Phone",
             value: farmer.phone,
             href: `tel:${farmer.phone}`,
           },
           {
             icon: `<svg viewBox="0 0 24 24" fill="currentColor">
-                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-                   </svg>`,
+               <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+             </svg>`,
             label: "Email",
             value: farmer.email,
             href: `mailto:${farmer.email}`,
           },
           {
             icon: `<svg viewBox="0 0 24 24" fill="currentColor">
-                     <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
-                   </svg>`,
+               <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+             </svg>`,
             label: "Address",
             value: farmer.address,
             href: null,
@@ -920,20 +931,20 @@
           .filter((item) => item.value)
           .map(
             (item) => `
-              <div class="contact-item">
-                <div class="contact-icon">${item.icon}</div>
-                <div class="contact-info">
-                  <div class="contact-label">${item.label}</div>
-                  <div class="contact-value">
-                    ${
-                      item.href
-                        ? `<a href="${item.href}">${item.value}</a>`
-                        : item.value
-                    }
-                  </div>
-                </div>
-              </div>
-            `
+        <div class="contact-item">
+          <div class="contact-header">
+            <div class="contact-icon">${item.icon}</div>
+            <div class="contact-label">${item.label}</div>
+          </div>
+          <div class="contact-value">
+            ${
+              item.href
+                ? `<a href="${item.href}">${item.value}</a>`
+                : item.value
+            }
+          </div>
+        </div>
+      `
           )
           .join("");
       }
@@ -1099,7 +1110,9 @@
           <div class="detail-row">
             <span class="detail-label">Visits</span>
             <span class="detail-value">${
-              farmer.visitsAllowed === "Yes" ? "✅" : "❌"
+              farmer.visitsAllowed === "Yes"
+                ? "Open to Visitors"
+                : "Not Open to Visitors"
             }</span>
           </div>
         `;
