--- a/services/index.html
+++ b/services/index.html
@@ -1780,11 +1780,11 @@
                 <i class="fas fa-external-link-alt me-2"></i>Visit keboon.net
               </a>
               <a
-                href="https://app.keboon.net"
+                href="https://keboon.net/directory"
                 target="_blank"
                 class="btn btn-outline-secondary btn-sm"
                 >
-                <i class="fas fa-mobile-alt me-2"></i>Visit app.keboon.net
+                <i class="fas fa-mobile-alt me-2"></i>Visit Keboon Directory
               </a>
             </div>
           </div>
