--- a/directory.html
+++ b/directory.html
@@ -1214,6 +1214,36 @@
         </div>
       </div>
 
+      <!-- Add this to your directory.html page -->
+      <div
+        class="farmer-access"
+        style="
+          text-align: center;
+          padding: 20px;
+          background: #f8f9fa;
+          margin: 20px 0;
+          border-radius: 10px;
+        "
+      >
+        <h3 style="color: #2d5016; margin-bottom: 10px">For Farmers</h3>
+        <p style="color: #6c757d; margin-bottom: 15px">
+          Already registered? Access your messages and manage your listing
+        </p>
+        <a
+          href="farmer-messages.html"
+          style="
+            background: #3f6b20;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 25px;
+            text-decoration: none;
+            font-weight: 600;
+          "
+        >
+          Access Farmer Portal
+        </a>
+      </div>
+
       <!-- Add Farm Form Section -->
       <div class="form-section" id="addForm">
         <div class="form-content">
@@ -2086,7 +2116,7 @@
 
       // Google Apps Script configuration - UPDATE THIS WITH YOUR ACTUAL URL
       const APPS_SCRIPT_URL =
-        "https://script.google.com/macros/s/AKfycbyGYH3VVm0l3HglytNHawKYX-yEWU6Nsr1FfkbLHcQUnhsQswA0btgNWm2aWesGDCMw/exec";
+        "https://script.google.com/macros/s/AKfycbxXSsGq5vCpJttfjbkC8rg6j4pYDO4Zbylx4jsByb9QYwH0gMdo5miFahxZWStM20P6/exec";
 
       // Toggle form visibility
       function toggleForm(formId) {
